Fixes small columns that grow on small breakpoints

--- a/components/_columns.scss
+++ b/components/_columns.scss
@@ -78,6 +78,7 @@
     $flex-basis: 8.333333% * $i;
     .sm-col-#{$i} {
         flex-basis: $flex-basis;
+        flex-grow: 0;
     }
   }
 }
